--- a/front_end/package.json
+++ b/front_end/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
-    "next": "15.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
