solve error in Ai and now every thing become run successfly

--- a/front_end/package.json
+++ b/front_end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "framer-motion": "^12.5.0",
     "next": "^15.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
