--- a/front_end/package.json
+++ b/front_end/package.json
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-chat-elements": "^12.0.17",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
