Modify on Ai En_Tokenization ,auto correct,grammer_check  and bigram

--- a/Ai/ai_config.json
+++ b/Ai/ai_config.json
@@ -1,5 +1,6 @@
 {
   "threshold": 0.5,
   "use_semantic_mapper": false,
-  "use_semantic_armapper": false
+  "use_semantic_armapper": true,
+  "show_grammar_feedback": true
 }
